# DicomGateWay

./: .gitignore  CMakeLists.txt  README.md  dcmqrscp.cfg
dcmqrscp/scp01/: dcmqrscp.cfg  log.txt
include/: DICOMClient.h
src/: DICOMClient.cpp  main.cpp
src/DCMTKTEST/: main.cpp
